--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img src="/uploads/2021/02/logo_0_1613588860.svg">
+            <img src="https://learn.logika.asia/uploads/2021/03/logo1_0_1615899136.svg">
             <a class="button" href="">Discounts</a>
         </header>
         <nav>
@@ -19,36 +19,44 @@
             <section class="info">
                 <article>
                     <h2>Leisure laptop</h2>
-                    <img src="/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg" width="400px" height="300px"/>
+                    <img src="https://learn.logika.asia/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg" width="400px" height="300px"/>
                     <p>Samsung V145-S</p>
                     <a class="article-but" href="">Details</a>
                 </article>
                 <article>
                     <h2>How to choose headphones</h2>
-                    <img src="/uploads/2021/02/music-1813100_1280_0_1613586010.png" width="330px" height="300px"/>
+                    <img src="https://learn.logika.asia/uploads/2021/02/music-1813100_1280_0_1613586010.png" width="330px" height="300px"/>
                     <p>Let's talk about news</p>
                     <a class="article-but" href="">Details</a>
                 </article>
                 <article>
                     <h2>Dream phone</h2>
-                    <img src="/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg" width="400px" height="300px"/>
+                    <img src="https://learn.logika.asia/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg" width="400px" height="300px"/>
                     <p>Apple iphone 13</p>
                     <a class="article-but" href="">Details</a>
                 </article>
                 <article>
                     <h2>Technology for everything</h2>
-                    <img src="/uploads/2021/02/laptop-1483974_1920_0_1613586010.jpg" width="400px" height="300px"/>
+                    <img src="https://learn.logika.asia/uploads/2021/02/laptop-1483974_1920_0_1613586010.jpg" width="400px" height="300px"/>
                     <p>And the whole world is not enough...</p>
                     <a class="article-but" href="">Details</a>
                 </article>
             </section>
-            <img src="/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width="960" height="270"/>
+            <img src="https://learn.logika.asia/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width= "100%" height="270px" />
+            <aside class="promo">
+            <p><b>Write - get a promotional code!</b></p>
+            <a class="social1" href=""><img src="facebook.png" width="50px" height="50px"></a>
+          
+            <a class="social2" href=""><img src="instagram.png" width="50px" height="50px"></a>
+            </aside>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/Group%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <p><b>Write and get a<br/> promo code!</b></p> 
-        </footer>
+            <div class="contacts">
+                <p class="footer-text"><span class="address">Address:</span> Techno town,<br/> Modern road, 29/2</p>
+                <p class="footer-text"><span class="tel">Phone:</span> 4138-564</p>
+            </div>
+            <div class="footer-logo">
+                <img src="https://learn.logika.asia/uploads/2021/03/logo2_0_1615898903.svg"/>
+            </div>
     </body>
 </html>
